python-compiler-main/milestone2/src/parser.output
Terminals unused in grammar

    KEYWORDS
    ASYNC
    AWAIT
    COMMENT
    END
    FSTRING
    MIDDLE
    ERROR
    START
    TYPE
    AT
    AND_KEYWORD
    OR_KEYWORD
    NOT_KEYWORD
    IMPORT
    YIELD
    FROM
    ATEQUAL
    NONLOCAL
    CLOSE_BRACE
    ELLIPSIS
    AS
    ASSERT
    DEL
    EXCEPT
    FINALLY
    LAMBDA
    PASS
    RAISE
    TRY
    WITH
    OPEN_BRACE


Grammar

    0 $accept: file_input $end

    1 file_input: END_MARKER
    2           | newline_or_stmt_one_or_more END_MARKER

    3 newline_or_stmt_one_or_more: newline_or_stmt_one_or_more NEWLINE
    4                            | newline_or_stmt_one_or_more stmt
    5                            | NEWLINE
    6                            | stmt

    7 funcdef: funcdef_head parameters COLON func_body_suite
    8        | funcdef_head parameters func_return_type COLON func_body_suite

    9 funcdef_head: DEF NAME

   10 parameters: OPEN_PAREN CLOSE_PAREN
   11           | OPEN_PAREN typedargslist CLOSE_PAREN

   12 func_return_type: ARROW datatype
   13                 | ARROW NONE

   14 typedargslist: NAME COLON datatype
   15              | typedargslist COMMA NAME COLON datatype
   16              | NAME

   17 stmt: simple_stmt
   18     | compound_stmt

   19 stmts: stmts stmt
   20      | stmt

   21 simple_stmt: small_stmt_semicolon_sep NEWLINE

   22 small_stmt: expr_stmt
   23           | flow_stmt
   24           | global_stmt

   25 global_stmt: GLOBAL NAME
   26            | GLOBAL NAME comma_name_one_or_more

   27 comma_name_one_or_more: COMMA NAME
   28                       | COMMA NAME comma_name_one_or_more

   29 small_stmt_semicolon_sep: small_stmt SEMICOLON small_stmt_semicolon_sep
   30                         | small_stmt
   31                         | small_stmt SEMICOLON

   32 expr_stmt: testlist_star_expr expr_3_or
   33          | NAME COLON datatype
   34          | NAME COLON datatype EQUAL testlist_star_expr
   35          | testlist_star_expr
   36          | atom DOT NAME COLON datatype EQUAL testlist_star_expr
   37          | atom DOT NAME COLON datatype

   38 expr_3_or: augassign testlist
   39          | equal_testlist_star_expr

   40 equal_testlist_star_expr: EQUAL testlist_star_expr

   41 testlist_star_expr: test

   42 augassign: PLUS_EQUAL
   43          | MINUS_EQUAL
   44          | MULTIPLY_EQUAL
   45          | DIVIDE_EQUAL
   46          | MODULO_EQUAL
   47          | BITWISE_AND_EQUAL
   48          | BITWISE_OR_EQUAL
   49          | BITWISE_XOR_EQUAL
   50          | LEFT_SHIFT_EQUAL
   51          | RIGHT_SHIFT_EQUAL
   52          | POWER_EQUAL
   53          | FLOOR_DIVIDE_EQUAL

   54 flow_stmt: BREAK
   55          | CONTINUE
   56          | return_stmt

   57 return_stmt: RETURN
   58            | RETURN testlist_star_expr

   59 compound_stmt: if_stmt
   60              | while_stmt
   61              | for_stmt
   62              | funcdef
   63              | classdef

   64 if_head: IF

   65 if_stmt: if_head namedexpr_test COLON suite
   66        | if_head namedexpr_test COLON suite elif_namedexpr_test_colon_suite_one_or_more
   67        | if_head namedexpr_test COLON suite ELSE COLON suite
   68        | if_head namedexpr_test COLON suite elif_namedexpr_test_colon_suite_one_or_more ELSE COLON suite

   69 elif_namedexpr_test_colon_suite_one_or_more: ELIF namedexpr_test COLON suite elif_namedexpr_test_colon_suite_one_or_more
   70                                            | ELIF namedexpr_test COLON suite

   71 while_stmt: while_head namedexpr_test COLON suite
   72           | while_head namedexpr_test COLON suite ELSE COLON suite

   73 while_head: WHILE

   74 for_stmt: for_head exprlist IN RANGE OPEN_PAREN test COMMA test CLOSE_PAREN COLON suite
   75         | for_head exprlist IN RANGE OPEN_PAREN test CLOSE_PAREN COLON suite
   76         | for_head exprlist IN RANGE OPEN_PAREN test CLOSE_PAREN COLON suite ELSE COLON suite
   77         | for_head exprlist IN RANGE OPEN_PAREN test COMMA test CLOSE_PAREN COLON suite ELSE COLON suite

   78 for_head: FOR

   79 suite: simple_stmt
   80      | NEWLINE INDENT stmts DEDENT

   81 namedexpr_test: test
   82               | test COLONEQUAL test

   83 test: or_test

   84 or_test: and_test
   85        | and_test_star and_test

   86 and_test_star: and_test OR
   87              | and_test_star and_test OR

   88 and_test: not_test
   89         | and_not_test_plus not_test

   90 and_not_test_plus: not_test AND
   91                  | and_not_test_plus not_test AND

   92 not_test: not_plus_comparison
   93         | comparison

   94 not_plus_comparison: NOT comparison
   95                    | NOT not_plus_comparison

   96 comparison: comp_op_expr_plus expr
   97           | expr

   98 comp_op_expr_plus: expr comp_op
   99                  | comp_op_expr_plus expr comp_op

  100 comp_op: GREATER_THAN
  101        | LESS_THAN
  102        | EQUAL_EQUAL
  103        | GREATER_THAN_EQUAL
  104        | LESS_THAN_EQUAL
  105        | NOTEQUAL
  106        | IN
  107        | NOT IN
  108        | IS
  109        | IS NOT

  110 expr: r_expr xor_expr
  111     | xor_expr

  112 r_expr: r_expr xor_expr BITWISE_OR
  113       | xor_expr BITWISE_OR

  114 xor_expr: x_expr and_expr
  115         | and_expr

  116 x_expr: x_expr and_expr BITWISE_XOR
  117       | and_expr BITWISE_XOR

  118 and_expr: a_expr shift_expr
  119         | shift_expr

  120 a_expr: a_expr shift_expr BITWISE_AND
  121       | shift_expr BITWISE_AND

  122 shift_expr: lr_shift arith_expr
  123           | arith_expr

  124 lr_shift: arith_expr LEFT_SHIFT
  125         | arith_expr RIGHT_SHIFT
  126         | lr_shift arith_expr LEFT_SHIFT
  127         | lr_shift arith_expr RIGHT_SHIFT

  128 arith_expr: pm_term term
  129           | term

  130 pm_term: term PLUS
  131        | term MINUS
  132        | pm_term term PLUS
  133        | pm_term term MINUS

  134 term: factor
  135     | op_fac factor

  136 op_fac: factor MULTIPLY
  137       | factor DIVIDE
  138       | factor MODULO
  139       | factor FLOOR_DIVIDE
  140       | op_fac factor MULTIPLY
  141       | op_fac factor DIVIDE
  142       | op_fac factor MODULO
  143       | op_fac factor FLOOR_DIVIDE

  144 factor: PLUS factor
  145       | MINUS factor
  146       | BITWISE_NOT factor
  147       | power

  148 power: atom_expr
  149      | atom_expr POWER factor
  150      | atom
  151      | atom POWER factor

  152 atom_expr: atom DOT NAME
  153          | atom_expr DOT NAME
  154          | atom OPEN_BRACKET test CLOSE_BRACKET
  155          | atom_expr OPEN_BRACKET test CLOSE_BRACKET
  156          | atom OPEN_PAREN arglist CLOSE_PAREN
  157          | atom OPEN_PAREN CLOSE_PAREN
  158          | atom_expr OPEN_PAREN CLOSE_PAREN
  159          | atom_expr OPEN_PAREN arglist CLOSE_PAREN

  160 atom: OPEN_PAREN testlist_comp CLOSE_PAREN
  161     | OPEN_PAREN CLOSE_PAREN
  162     | OPEN_BRACKET testlist_comp CLOSE_BRACKET
  163     | OPEN_BRACKET CLOSE_BRACKET
  164     | NAME
  165     | NUMBER
  166     | string_one_or_more
  167     | NONE
  168     | TRUE_
  169     | FALSE_
  170     | REAL_NUMBER

  171 string_one_or_more: string_one_or_more STRING
  172                   | STRING

  173 testlist_comp: named_star_or comma_named_star_comma
  174              | named_star_or

  175 comma_named_star_comma: comma_named_star COMMA
  176                       | comma_named_star
  177                       | COMMA

  178 named_star_or: namedexpr_test

  179 comma_named_star: COMMA named_star_or
  180                 | comma_named_star COMMA named_star_or

  181 exprlist: expr

  182 testlist: test

  183 classdef: classdef_head suite

  184 classdef_head: CLASS NAME COLON
  185              | CLASS NAME OPEN_PAREN CLOSE_PAREN COLON
  186              | CLASS NAME OPEN_PAREN NAME CLOSE_PAREN COLON

  187 arglist: argument comma_arg
  188        | argument comma_arg COMMA
  189        | argument
  190        | argument COMMA

  191 comma_arg: COMMA argument
  192          | COMMA argument comma_arg

  193 argument: test

  194 func_body_suite: simple_stmt
  195                | NEWLINE INDENT stmts DEDENT

  196 datatype: NAME
  197         | NAME OPEN_BRACKET NAME CLOSE_BRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FOR <nonTerminal> (258) 78
    SEMICOLON <nonTerminal> (259) 29 31
    KEYWORDS <nonTerminal> (260)
    ASYNC <nonTerminal> (261)
    AWAIT <nonTerminal> (262)
    COMMENT <nonTerminal> (263)
    DEDENT <nonTerminal> (264) 80 195
    END <nonTerminal> (265)
    FSTRING <nonTerminal> (266)
    INDENT <nonTerminal> (267) 80 195
    MIDDLE <nonTerminal> (268)
    NAME <nonTerminal> (269) 9 14 15 16 25 26 27 28 33 34 36 37 152 153 164 184 185 186 196 197
    NEWLINE <nonTerminal> (270) 3 5 21 80 195
    NUMBER <nonTerminal> (271) 165
    MULTIPLY <nonTerminal> (272) 136 140
    MODULO_EQUAL <nonTerminal> (273) 46
    ERROR <nonTerminal> (274)
    START <nonTerminal> (275)
    STRING <nonTerminal> (276) 171 172
    TYPE <nonTerminal> (277)
    END_MARKER <nonTerminal> (278) 1 2
    AND <nonTerminal> (279) 90 91
    OR <nonTerminal> (280) 86 87
    NOT <nonTerminal> (281) 94 95 107 109
    COMMA <nonTerminal> (282) 15 27 28 74 77 175 177 179 180 188 190 191 192
    EQUAL_EQUAL <nonTerminal> (283) 102
    COLONEQUAL <nonTerminal> (284) 82
    LEFT_SHIFT <nonTerminal> (285) 124 126
    RIGHT_SHIFT <nonTerminal> (286) 125 127
    PLUS <nonTerminal> (287) 130 132 144
    MINUS <nonTerminal> (288) 131 133 145
    POWER <nonTerminal> (289) 149 151
    DIVIDE <nonTerminal> (290) 137 141
    FLOOR_DIVIDE <nonTerminal> (291) 139 143
    AT <nonTerminal> (292)
    MODULO <nonTerminal> (293) 138 142
    AND_KEYWORD <nonTerminal> (294)
    OR_KEYWORD <nonTerminal> (295)
    NOT_KEYWORD <nonTerminal> (296)
    BITWISE_AND <nonTerminal> (297) 120 121
    BITWISE_OR <nonTerminal> (298) 112 113
    BITWISE_XOR <nonTerminal> (299) 116 117
    BITWISE_NOT <nonTerminal> (300) 146
    IN <nonTerminal> (301) 74 75 76 77 106 107
    IMPORT <nonTerminal> (302)
    RANGE <nonTerminal> (303) 74 75 76 77
    YIELD <nonTerminal> (304)
    FROM <nonTerminal> (305)
    ELSE <nonTerminal> (306) 67 68 72 76 77
    IF <nonTerminal> (307) 64
    IS <nonTerminal> (308) 108 109
    NOTEQUAL <nonTerminal> (309) 105
    LESS_THAN <nonTerminal> (310) 101
    GREATER_THAN <nonTerminal> (311) 100
    EQUAL <nonTerminal> (312) 34 36 40
    LESS_THAN_EQUAL <nonTerminal> (313) 104
    COLON <nonTerminal> (314) 7 8 14 15 33 34 36 37 65 66 67 68 69 70 71 72 74 75 76 77 184 185 186
    GREATER_THAN_EQUAL <nonTerminal> (315) 103
    LEFT_SHIFT_EQUAL <nonTerminal> (316) 50
    RIGHT_SHIFT_EQUAL <nonTerminal> (317) 51
    ATEQUAL <nonTerminal> (318)
    FALSE_ <nonTerminal> (319) 169
    TRUE_ <nonTerminal> (320) 168
    NONE <nonTerminal> (321) 13 167
    NONLOCAL <nonTerminal> (322)
    CLOSE_BRACE <nonTerminal> (323)
    BITWISE_OR_EQUAL <nonTerminal> (324) 48
    BITWISE_AND_EQUAL <nonTerminal> (325) 47
    OPEN_PAREN <nonTerminal> (326) 10 11 74 75 76 77 156 157 158 159 160 161 185 186
    CLOSE_PAREN <nonTerminal> (327) 10 11 74 75 76 77 156 157 158 159 160 161 185 186
    POWER_EQUAL <nonTerminal> (328) 52
    MULTIPLY_EQUAL <nonTerminal> (329) 44
    PLUS_EQUAL <nonTerminal> (330) 42
    MINUS_EQUAL <nonTerminal> (331) 43
    ARROW <nonTerminal> (332) 12 13
    DOT <nonTerminal> (333) 36 37 152 153
    ELLIPSIS <nonTerminal> (334)
    FLOOR_DIVIDE_EQUAL <nonTerminal> (335) 53
    DIVIDE_EQUAL <nonTerminal> (336) 45
    OPEN_BRACKET <nonTerminal> (337) 154 155 162 163 197
    CLOSE_BRACKET <nonTerminal> (338) 154 155 162 163 197
    BITWISE_XOR_EQUAL <nonTerminal> (339) 49
    AS <nonTerminal> (340)
    ASSERT <nonTerminal> (341)
    BREAK <nonTerminal> (342) 54
    CLASS <nonTerminal> (343) 184 185 186
    CONTINUE <nonTerminal> (344) 55
    DEF <nonTerminal> (345) 9
    DEL <nonTerminal> (346)
    ELIF <nonTerminal> (347) 69 70
    EXCEPT <nonTerminal> (348)
    FINALLY <nonTerminal> (349)
    GLOBAL <nonTerminal> (350) 25 26
    LAMBDA <nonTerminal> (351)
    PASS <nonTerminal> (352)
    RAISE <nonTerminal> (353)
    RETURN <nonTerminal> (354) 57 58
    TRY <nonTerminal> (355)
    WHILE <nonTerminal> (356) 73
    WITH <nonTerminal> (357)
    OPEN_BRACE <nonTerminal> (358)
    REAL_NUMBER <nonTerminal> (359) 170


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    file_input <nonTerminal> (106)
        on left: 1 2
        on right: 0
    newline_or_stmt_one_or_more <nonTerminal> (107)
        on left: 3 4 5 6
        on right: 2 3 4
    funcdef <nonTerminal> (108)
        on left: 7 8
        on right: 62
    funcdef_head <nonTerminal> (109)
        on left: 9
        on right: 7 8
    parameters <nonTerminal> (110)
        on left: 10 11
        on right: 7 8
    func_return_type <nonTerminal> (111)
        on left: 12 13
        on right: 8
    typedargslist <nonTerminal> (112)
        on left: 14 15 16
        on right: 11 15
    stmt <nonTerminal> (113)
        on left: 17 18
        on right: 4 6 19 20
    stmts <nonTerminal> (114)
        on left: 19 20
        on right: 19 80 195
    simple_stmt <nonTerminal> (115)
        on left: 21
        on right: 17 79 194
    small_stmt <nonTerminal> (116)
        on left: 22 23 24
        on right: 29 30 31
    global_stmt <nonTerminal> (117)
        on left: 25 26
        on right: 24
    comma_name_one_or_more (118)
        on left: 27 28
        on right: 26 28
    small_stmt_semicolon_sep <nonTerminal> (119)
        on left: 29 30 31
        on right: 21 29
    expr_stmt <nonTerminal> (120)
        on left: 32 33 34 35 36 37
        on right: 22
    expr_3_or <nonTerminal> (121)
        on left: 38 39
        on right: 32
    equal_testlist_star_expr <nonTerminal> (122)
        on left: 40
        on right: 39
    testlist_star_expr <nonTerminal> (123)
        on left: 41
        on right: 32 34 35 36 40 58
    augassign <nonTerminal> (124)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 38
    flow_stmt <nonTerminal> (125)
        on left: 54 55 56
        on right: 23
    return_stmt <nonTerminal> (126)
        on left: 57 58
        on right: 56
    compound_stmt <nonTerminal> (127)
        on left: 59 60 61 62 63
        on right: 18
    if_head (128)
        on left: 64
        on right: 65 66 67 68
    if_stmt <nonTerminal> (129)
        on left: 65 66 67 68
        on right: 59
    elif_namedexpr_test_colon_suite_one_or_more <nonTerminal> (130)
        on left: 69 70
        on right: 66 68 69
    while_stmt <nonTerminal> (131)
        on left: 71 72
        on right: 60
    while_head (132)
        on left: 73
        on right: 71 72
    for_stmt <nonTerminal> (133)
        on left: 74 75 76 77
        on right: 61
    for_head (134)
        on left: 78
        on right: 74 75 76 77
    suite <nonTerminal> (135)
        on left: 79 80
        on right: 65 66 67 68 69 70 71 72 74 75 76 77 183
    namedexpr_test <nonTerminal> (136)
        on left: 81 82
        on right: 65 66 67 68 69 70 71 72 178
    test <nonTerminal> (137)
        on left: 83
        on right: 41 74 75 76 77 81 82 154 155 182 193
    or_test <nonTerminal> (138)
        on left: 84 85
        on right: 83
    and_test_star <nonTerminal> (139)
        on left: 86 87
        on right: 85 87
    and_test <nonTerminal> (140)
        on left: 88 89
        on right: 84 85 86 87
    and_not_test_plus <nonTerminal> (141)
        on left: 90 91
        on right: 89 91
    not_test <nonTerminal> (142)
        on left: 92 93
        on right: 88 89 90 91
    not_plus_comparison <nonTerminal> (143)
        on left: 94 95
        on right: 92 95
    comparison <nonTerminal> (144)
        on left: 96 97
        on right: 93 94
    comp_op_expr_plus <nonTerminal> (145)
        on left: 98 99
        on right: 96 99
    comp_op <nonTerminal> (146)
        on left: 100 101 102 103 104 105 106 107 108 109
        on right: 98 99
    expr <nonTerminal> (147)
        on left: 110 111
        on right: 96 97 98 99 181
    r_expr <nonTerminal> (148)
        on left: 112 113
        on right: 110 112
    xor_expr <nonTerminal> (149)
        on left: 114 115
        on right: 110 111 112 113
    x_expr <nonTerminal> (150)
        on left: 116 117
        on right: 114 116
    and_expr <nonTerminal> (151)
        on left: 118 119
        on right: 114 115 116 117
    a_expr <nonTerminal> (152)
        on left: 120 121
        on right: 118 120
    shift_expr <nonTerminal> (153)
        on left: 122 123
        on right: 118 119 120 121
    lr_shift <nonTerminal> (154)
        on left: 124 125 126 127
        on right: 122 126 127
    arith_expr <nonTerminal> (155)
        on left: 128 129
        on right: 122 123 124 125 126 127
    pm_term <nonTerminal> (156)
        on left: 130 131 132 133
        on right: 128 132 133
    term <nonTerminal> (157)
        on left: 134 135
        on right: 128 129 130 131 132 133
    op_fac <nonTerminal> (158)
        on left: 136 137 138 139 140 141 142 143
        on right: 135 140 141 142 143
    factor <nonTerminal> (159)
        on left: 144 145 146 147
        on right: 134 135 136 137 138 139 140 141 142 143 144 145 146 149 151
    power <nonTerminal> (160)
        on left: 148 149 150 151
        on right: 147
    atom_expr <nonTerminal> (161)
        on left: 152 153 154 155 156 157 158 159
        on right: 148 149 153 155 158 159
    atom <nonTerminal> (162)
        on left: 160 161 162 163 164 165 166 167 168 169 170
        on right: 36 37 150 151 152 154 156 157
    string_one_or_more <nonTerminal> (163)
        on left: 171 172
        on right: 166 171
    testlist_comp <nonTerminal> (164)
        on left: 173 174
        on right: 160 162
    comma_named_star_comma <nonTerminal> (165)
        on left: 175 176 177
        on right: 173
    named_star_or <nonTerminal> (166)
        on left: 178
        on right: 173 174 179 180
    comma_named_star <nonTerminal> (167)
        on left: 179 180
        on right: 175 176 180
    exprlist <nonTerminal> (168)
        on left: 181
        on right: 74 75 76 77
    testlist <nonTerminal> (169)
        on left: 182
        on right: 38
    classdef <nonTerminal> (170)
        on left: 183
        on right: 63
    classdef_head (171)
        on left: 184 185 186
        on right: 183
    arglist <nonTerminal> (172)
        on left: 187 188 189 190
        on right: 156 159
    comma_arg <nonTerminal> (173)
        on left: 191 192
        on right: 187 188 192
    argument <nonTerminal> (174)
        on left: 193
        on right: 187 188 189 190 191 192
    func_body_suite <nonTerminal> (175)
        on left: 194 195
        on right: 7 8
    datatype <type> (176)
        on left: 196 197
        on right: 12 14 15 33 34 36 37


State 0

    0 $accept: • file_input $end

    FOR           shift, and go to state 1
    NAME          shift, and go to state 2
    NEWLINE       shift, and go to state 3
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    END_MARKER    shift, and go to state 6
    NOT           shift, and go to state 7
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    IF            shift, and go to state 11
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    BREAK         shift, and go to state 17
    CLASS         shift, and go to state 18
    CONTINUE      shift, and go to state 19
    DEF           shift, and go to state 20
    GLOBAL        shift, and go to state 21
    RETURN        shift, and go to state 22
    WHILE         shift, and go to state 23
    REAL_NUMBER   shift, and go to state 24

    file_input                   go to state 25
    newline_or_stmt_one_or_more  go to state 26
    funcdef                      go to state 27
    funcdef_head                 go to state 28
    stmt                         go to state 29
    simple_stmt                  go to state 30
    small_stmt                   go to state 31
    global_stmt                  go to state 32
    small_stmt_semicolon_sep     go to state 33
    expr_stmt                    go to state 34
    testlist_star_expr           go to state 35
    flow_stmt                    go to state 36
    return_stmt                  go to state 37
    compound_stmt                go to state 38
    if_head                      go to state 39
    if_stmt                      go to state 40
    while_stmt                   go to state 41
    while_head                   go to state 42
    for_stmt                     go to state 43
    for_head                     go to state 44
    test                         go to state 45
    or_test                      go to state 46
    and_test_star                go to state 47
    and_test                     go to state 48
    and_not_test_plus            go to state 49
    not_test                     go to state 50
    not_plus_comparison          go to state 51
    comparison                   go to state 52
    comp_op_expr_plus            go to state 53
    expr                         go to state 54
    r_expr                       go to state 55
    xor_expr                     go to state 56
    x_expr                       go to state 57
    and_expr                     go to state 58
    a_expr                       go to state 59
    shift_expr                   go to state 60
    lr_shift                     go to state 61
    arith_expr                   go to state 62
    pm_term                      go to state 63
    term                         go to state 64
    op_fac                       go to state 65
    factor                       go to state 66
    power                        go to state 67
    atom_expr                    go to state 68
    atom                         go to state 69
    string_one_or_more           go to state 70
    classdef                     go to state 71
    classdef_head                go to state 72


State 1

   78 for_head: FOR •

    $default  reduce using rule 78 (for_head)


State 2

   33 expr_stmt: NAME • COLON datatype
   34          | NAME • COLON datatype EQUAL testlist_star_expr
  164 atom: NAME •

    COLON  shift, and go to state 73

    $default  reduce using rule 164 (atom)


State 3

    5 newline_or_stmt_one_or_more: NEWLINE •

    $default  reduce using rule 5 (newline_or_stmt_one_or_more)


State 4

  165 atom: NUMBER •

    $default  reduce using rule 165 (atom)


State 5

  172 string_one_or_more: STRING •

    $default  reduce using rule 172 (string_one_or_more)


State 6

    1 file_input: END_MARKER •

    $default  reduce using rule 1 (file_input)


State 7

   94 not_plus_comparison: NOT • comparison
   95                    | NOT • not_plus_comparison

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    NOT           shift, and go to state 7
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    not_plus_comparison  go to state 75
    comparison           go to state 76
    comp_op_expr_plus    go to state 53
    expr                 go to state 54
    r_expr               go to state 55
    xor_expr             go to state 56
    x_expr               go to state 57
    and_expr             go to state 58
    a_expr               go to state 59
    shift_expr           go to state 60
    lr_shift             go to state 61
    arith_expr           go to state 62
    pm_term              go to state 63
    term                 go to state 64
    op_fac               go to state 65
    factor               go to state 66
    power                go to state 67
    atom_expr            go to state 68
    atom                 go to state 77
    string_one_or_more   go to state 70


State 8

  144 factor: PLUS • factor

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    factor              go to state 78
    power               go to state 67
    atom_expr           go to state 68
    atom                go to state 77
    string_one_or_more  go to state 70


State 9

  145 factor: MINUS • factor

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    factor              go to state 79
    power               go to state 67
    atom_expr           go to state 68
    atom                go to state 77
    string_one_or_more  go to state 70


State 10

  146 factor: BITWISE_NOT • factor

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    factor              go to state 80
    power               go to state 67
    atom_expr           go to state 68
    atom                go to state 77
    string_one_or_more  go to state 70


State 11

   64 if_head: IF •

    $default  reduce using rule 64 (if_head)


State 12

  169 atom: FALSE_ •

    $default  reduce using rule 169 (atom)


State 13

  168 atom: TRUE_ •

    $default  reduce using rule 168 (atom)


State 14

  167 atom: NONE •

    $default  reduce using rule 167 (atom)


State 15

  160 atom: OPEN_PAREN • testlist_comp CLOSE_PAREN
  161     | OPEN_PAREN • CLOSE_PAREN

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    NOT           shift, and go to state 7
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    CLOSE_PAREN   shift, and go to state 81
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    namedexpr_test       go to state 82
    test                 go to state 83
    or_test              go to state 46
    and_test_star        go to state 47
    and_test             go to state 48
    and_not_test_plus    go to state 49
    not_test             go to state 50
    not_plus_comparison  go to state 51
    comparison           go to state 52
    comp_op_expr_plus    go to state 53
    expr                 go to state 54
    r_expr               go to state 55
    xor_expr             go to state 56
    x_expr               go to state 57
    and_expr             go to state 58
    a_expr               go to state 59
    shift_expr           go to state 60
    lr_shift             go to state 61
    arith_expr           go to state 62
    pm_term              go to state 63
    term                 go to state 64
    op_fac               go to state 65
    factor               go to state 66
    power                go to state 67
    atom_expr            go to state 68
    atom                 go to state 77
    string_one_or_more   go to state 70
    testlist_comp        go to state 84
    named_star_or        go to state 85


State 16

  162 atom: OPEN_BRACKET • testlist_comp CLOSE_BRACKET
  163     | OPEN_BRACKET • CLOSE_BRACKET

    NAME           shift, and go to state 74
    NUMBER         shift, and go to state 4
    STRING         shift, and go to state 5
    NOT            shift, and go to state 7
    PLUS           shift, and go to state 8
    MINUS          shift, and go to state 9
    BITWISE_NOT    shift, and go to state 10
    FALSE_         shift, and go to state 12
    TRUE_          shift, and go to state 13
    NONE           shift, and go to state 14
    OPEN_PAREN     shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    CLOSE_BRACKET  shift, and go to state 86
    REAL_NUMBER    shift, and go to state 24

    namedexpr_test       go to state 82
    test                 go to state 83
    or_test              go to state 46
    and_test_star        go to state 47
    and_test             go to state 48
    and_not_test_plus    go to state 49
    not_test             go to state 50
    not_plus_comparison  go to state 51
    comparison           go to state 52
    comp_op_expr_plus    go to state 53
    expr                 go to state 54
    r_expr               go to state 55
    xor_expr             go to state 56
    x_expr               go to state 57
    and_expr             go to state 58
    a_expr               go to state 59
    shift_expr           go to state 60
    lr_shift             go to state 61
    arith_expr           go to state 62
    pm_term              go to state 63
    term                 go to state 64
    op_fac               go to state 65
    factor               go to state 66
    power                go to state 67
    atom_expr            go to state 68
    atom                 go to state 77
    string_one_or_more   go to state 70
    testlist_comp        go to state 87
    named_star_or        go to state 85


State 17

   54 flow_stmt: BREAK •

    $default  reduce using rule 54 (flow_stmt)


State 18

  184 classdef_head: CLASS • NAME COLON
  185              | CLASS • NAME OPEN_PAREN CLOSE_PAREN COLON
  186              | CLASS • NAME OPEN_PAREN NAME CLOSE_PAREN COLON

    NAME  shift, and go to state 88


State 19

   55 flow_stmt: CONTINUE •

    $default  reduce using rule 55 (flow_stmt)


State 20

    9 funcdef_head: DEF • NAME

    NAME  shift, and go to state 89


State 21

   25 global_stmt: GLOBAL • NAME
   26            | GLOBAL • NAME comma_name_one_or_more

    NAME  shift, and go to state 90


State 22

   57 return_stmt: RETURN •
   58            | RETURN • testlist_star_expr

    NAME          shift, and go to state 74
    NUMBER        shift, and go to state 4
    STRING        shift, and go to state 5
    NOT           shift, and go to state 7
    PLUS          shift, and go to state 8
    MINUS         shift, and go to state 9
    BITWISE_NOT   shift, and go to state 10
    FALSE_        shift, and go to state 12
    TRUE_         shift, and go to state 13
    NONE          shift, and go to state 14
    OPEN_PAREN    shift, and go to state 15
    OPEN_BRACKET  shift, and go to state 16
    REAL_NUMBER   shift, and go to state 24

    $default  reduce using rule 57 (return_stmt)

    testlist_star_expr   go to state 91
    test                 go to state 45
    or_test              go to state 46
    and_test_star        go to state 47
    and_test             go to state 48
    and_not_test_plus    go to state 49
    not_test             go to state 50
    not_plus_comparison  go to state 51
    comparison           go to state 52
    comp_op_expr_plus    go to state 53
    expr                 go to state 54
    r_expr               go to state 55
    xor_expr             go to state 56
    x_expr               go to state 57
    and_expr             go to state 58
    a_expr               go to state 59
    shift_expr           go to state 60
    lr_shift             go to state 61
    arith_expr           go to state 62
    pm_term              go to state 63
    term                 go to state 64
    op_fac               go to state 65
    factor               go to state 66
    power                go to state 67
    atom_expr            go to state 68
    atom                 go to state 77
    string_one_or_more   go to state 70


State 23

   73 while_head: WHILE •

    $default  reduce using rule 73 (while_head)


State 24

  170 atom: REAL_NUMBER •

    $default  reduce using rule 170 (atom)


State 25

    0 $accept: file_input • $end

    $end  shift, and go to state 92


State 26

    2 file_input: newline_or_stmt_one_or_more • END_MARKER
    3 newline_or_stmt_one_or_more: newline_or_stmt_one_or_more • NEWLINE
    4                            | newline_or_stmt_one_or_more • stmt
